--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -15,9 +15,9 @@
         </div>
         <button (click)="scroll('contact')" routerLink="/contact">Let's talk!</button>
     </div>
+    <img class="banner" src="assets/img/banner.png">
 </div>
 
-<!-- <img src="assets/img/banner.png"> -->
 
 <div class="info-content">
     <div class="info-icons" >
