--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -53,9 +53,9 @@
                 border: 1px solid #9747FF;
                 border-radius: 10px;
                 padding: 15px 25px;
-                cursor: pointer;
                 color: #FFFFFF;
                 font-size: 16px;
+                cursor: text;
                 &:hover {
                     border: 1px solid #1CDAE6;
                 }
@@ -67,7 +67,6 @@
                 border-radius: 10px;
                 padding: 15px 25px;
                 font-family: 'Poppins';
-                cursor: pointer;
                 color: #FFFFFF;
                 font-size: 16px;
                 &:hover {
