--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,111 +1,124 @@
-.headline-portfolio {
-    margin-top: 200px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    color: var(--white);
-    font-size: 90px;
-    font-family: 'Poppins bold';
-    img:nth-child(1) {
-        width: 109px;
-        margin-right: 20px;
-    }
-    div {
-        margin-right: 20px
-    }
-    img:nth-child(2) {
-        width: 484px;
-    }
-}
-
-.subtext-portfolio {
-    color: var(--white);
-    text-align: center;
-    font-size: 16px;
-}
-
-.project {
-    display: flex;
-    align-items: center;
-    margin: auto;
-    margin-top: 100px;
-    width: 80%;
-    justify-content: space-around;
-    img {
-        width: 620px;
-        height: 339px;
-        object-fit: contain;
-    }
-    .content-right {
+.portfolio-container {
+    position: relative;
+    .headline-portfolio {
+        margin-top: 200px;
         display: flex;
-        flex-direction: column;
-        height: 180px;
-        justify-content: space-around;
-        width: 450px;
-        div:nth-child(1) {
-            color: var(--purple);
-            font-size: 32px;
-            font-family: 'Poppins semibold';
+        justify-content: flex-end;
+        align-items: center;
+        color: var(--white);
+        font-size: 90px;
+        font-family: 'Poppins bold';
+        img:nth-child(1) {
+            width: 109px;
+            margin-right: 20px;
         }
-        div:nth-child(2) {
-            color: var(--light-blue);
-            font-size: 23px;
+        div {
+            margin-right: 20px
         }
-        div:nth-child(3) {
-            color: var(--white);
-            font-size: 16px;
+        img:nth-child(2) {
+            width: 484px;
         }
     }
-    .content-left {
+    .subtext-portfolio {
+        color: var(--white);
+        text-align: center;
+        font-size: 16px;
+    }
+    .project {
         display: flex;
-        flex-direction: column;
-        height: 180px;
+        align-items: center;
+        margin: auto;
+        margin-top: 100px;
+        width: 80%;
         justify-content: space-around;
-        width: 450px;
-        text-align: right;
-        div:nth-child(1) {
-            color: var(--purple);
-            font-size: 32px;
-            font-family: 'Poppins semibold'; 
+        img {
+            width: 620px;
+            height: 339px;
+            object-fit: contain;
         }
-        div:nth-child(2) {
-            color: var(--light-blue);
-            font-size: 23px;
+        .content-right {
+            display: flex;
+            flex-direction: column;
+            height: 180px;
+            justify-content: space-around;
+            width: 450px;
+            div:nth-child(1) {
+                color: var(--purple);
+                font-size: 32px;
+                font-family: 'Poppins semibold';
+            }
+            div:nth-child(2) {
+                color: var(--light-blue);
+                font-size: 23px;
+            }
+            div:nth-child(3) {
+                color: var(--white);
+                font-size: 16px;
+            }
         }
-        div:nth-child(3) {
-            color: var(--white);
-            font-size: 16px;
-        }
-    } 
-
-    .buttons {
-        button {
-            width: 152px;
-            height: 58px;
-            border-radius: 10px;
-            margin-top: 30px;
-            margin-right: 50px;
-            font-size: 23px;
-            padding: 15px 30px;
-            gap: 10px;
-            background-color: var(--purple);
-            color: var(--white);  
-            z-index: 1;
-            cursor: pointer;
-            transition: 0.2s ease-in;
-            border: none;
-            &:hover {
-                background-color: var(--light-blue);
+        .content-left {
+            display: flex;
+            flex-direction: column;
+            height: 180px;
+            justify-content: space-around;
+            width: 450px;
+            text-align: right;
+            div:nth-child(1) {
+                color: var(--purple);
+                font-size: 32px;
+                font-family: 'Poppins semibold'; 
+            }
+            div:nth-child(2) {
+                color: var(--light-blue);
+                font-size: 23px;
+            }
+            div:nth-child(3) {
+                color: var(--white);
+                font-size: 16px;
+            }
+        } 
+        .buttons {
+            button {
+                width: 152px;
+                height: 58px;
+                border-radius: 10px;
+                margin-top: 30px;
+                margin-right: 50px;
+                font-size: 23px;
+                padding: 15px 30px;
+                gap: 10px;
+                background-color: var(--purple);
+                color: var(--white);  
+                z-index: 1;
+                cursor: pointer;
                 transition: 0.2s ease-in;
+                border: none;
+                &:hover {
+                    background-color: var(--light-blue);
+                    transition: 0.2s ease-in;
+                }
+            }
+            .github-btn {
+                background-color: var(--background);
+                border: 1px solid var(--light-blue);
+                &:hover {
+                    background-color: var(--light-blue);
+                }
             }
         }
-        .github-btn {
-            background-color: var(--background);
-            border: 1px solid var(--light-blue);
-            &:hover {
-                background-color: var(--light-blue);
-            }
-        }
+    }
+    .shadow-left {
+        position: absolute;
+        top: 100px;
+        z-index: -1;
+        left: 0;
+        width: 650px;
+    }
+    .shadow-right {
+        position: absolute;
+        top: 1200px;
+        z-index: -1;
+        right: 0;
     }
 }
 
