--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,17 +10,32 @@
         <div>Need a Frontend developer? <span>Contact me!</span></div>
     </div>
     <div class="content-right">
-        <form (submit)="sendMail()" ngNativeValidate>
-            <input type="text" name="name" placeholder="Your name" required="required" #nameField autocomplete="off">
-            <input type="email" placeholder="Your email" required="required" #mailField autocomplete="off">
-            <textarea name="message" placeholder="Your message" required="required" #messageField></textarea>
+        <form (submit)="sendMail()" ngNativeValidate #form>
+            <div class="formfield">
+                <input type="text" name="name" placeholder=" " required #nameField >
+                <label>Your name</label>
+            </div>
+
+            <div class="formfield">
+              <input type="email" name="email" placeholder=" " required #mailField>
+              <label>Your email</label>
+            </div>
+
+            <div class="formfield">
+              <textarea name="message" placeholder=" " required #messageField></textarea>
+              <label>Your message</label>
+            </div>
+
             <div class="button">
                 <button type="submit" #sendBtn>Send message :)</button>
             </div>
         </form>
-        
     </div>
 </div>
+
+
+
+
 
 <div (click)="scroll('header')" routerLink="/" class="arrow-up"></div>
 
