--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,18 +12,33 @@
     <div class="content-right">
         <form (submit)="sendMail()" ngNativeValidate #form>
             <div class="formfield">
-                <input type="text" name="name" placeholder=" " required #nameField >
-                <label>Your name</label>
+                <input type="name" name="name" placeholder=" " required #nameField 
+                [class.error-border]="nameInvalid"
+                (invalid)="nameIsInvalid()"
+                (input)="nameInvalid=false">
+                <label [class.error-label]="nameInvalid">Your name</label>
+                <p *ngIf="nameInvalid" class="error-text">Your name is required</p>
+                <img *ngIf="nameInvalid" src="assets/img/input-error.png">
             </div>
 
             <div class="formfield">
-              <input type="email" name="email" placeholder=" " required #mailField>
-              <label>Your email</label>
+              <input type="email" name="email" placeholder=" " required #mailField 
+              [class.error-border]="emailInvalid"
+              (invalid)="emailIsInvalid()"
+              (input)="emailInvalid=false">
+              <label [class.error-label]="emailInvalid">Your email</label>
+              <p *ngIf="emailInvalid" class="error-text">Your email is required</p>
+              <img *ngIf="emailInvalid" src="assets/img/input-error.png">
             </div>
 
             <div class="formfield">
-              <textarea name="message" placeholder=" " required #messageField></textarea>
-              <label>Your message</label>
+              <textarea name="message" placeholder=" " required #messageField 
+              [class.error-border]="messageInvalid"
+              (invalid)="messageIsinvalid()"
+              (input)="messageInvalid=false"></textarea>
+              <label [class.error-label]="messageInvalid">Your message</label>
+              <p *ngIf="messageInvalid" class="error-text">Your message is empty</p>
+              <img *ngIf="messageInvalid" src="assets/img/input-error.png">
             </div>
 
             <div class="button">
@@ -32,10 +47,6 @@
         </form>
     </div>
 </div>
-
-
-
-
 
 <div (click)="scroll('header')" routerLink="/" class="arrow-up"></div>
 
