--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -43,6 +43,22 @@
             justify-content: space-between;
             .formfield {
                 position: relative;
+                .error-text {
+                    font-size: 12px;
+                    color: #E61C40;
+                    margin: 2px 0 15px 5px;
+                }
+                .error-border {
+                    border: 1px solid #E61C40;
+                }
+                img {
+                    position: absolute;
+                    right: 14px;
+                    top: 11px;
+                }
+                /* .error-label {
+                    color: #E61C40;
+                } */
             }
             input, textarea {
                 font-family: 'Poppins';
@@ -55,14 +71,14 @@
                 color: #FFFFFF;
                 transition: 0.2s ease-out;
                 background-color: #141D2F;
+                line-height: 17px;
                  &:hover {
                     border: 1px solid #1CDAE6;
                 }
             }
             textarea {
                 height: 180px;
-                resize: none;
-               
+                resize: none;  
             }
             input:focus, textarea:focus {
                 border-color: #9747FF;  
