--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -16,10 +16,10 @@
                 <div>{{ project.description }}</div>
                 <div class="buttons">
                     <a href="{{ project.linkLiveTest }}" target="_blank">
-                        <button>Live test</button>
+                        <button class="button-right">Live test</button>
                     </a>
                     <a href="{{ project.linkGitHub }}" target="_blank">
-                        <button class="github-btn">Github</button>
+                        <button class="github-btn button-right">Github</button>
                     </a>
                 </div>
             </div>
@@ -32,10 +32,10 @@
                 <div>{{ project.description }}</div>
                 <div class="buttons">
                     <a href="{{ project.linkLiveTest }}" target="_blank">
-                        <button>Live test</button>
+                        <button class="button-left">Live test</button>
                     </a>
                     <a href="{{ project.linkGitHub }}" target="_blank">
-                        <button class="github-btn">Github</button>
+                        <button class="github-btn button-left">Github</button>
                     </a>
                 </div>
             </div>
